// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
.emotion-0 {
  border-radius: 6px;
}

<Memo(InfoBox)
  className="emotion-0"
  message="message"
  onDismiss={[MockFunction]}
/>
`;

exports[`InfoBox InfoBoxBanner renders default 1`] = `
.emotion-0 {
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

<Memo(InfoBox)
  className="emotion-0"
  message="message"
  onDismiss={[MockFunction]}
/>
`;

exports[`InfoBox renders default 1`] = `
.emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

<div
  aria-live="polite"
  className="emotion-0"
  data-cy="infoBox"
  role="log"
>
  <div
    className="emotion-1"
  >
    message
  </div>
  <Clickable
    action={[Function]}
    tabIndex={0}
  >
    <span
      className="emotion-2"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="xs"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders with JSX message 1`] = `
.emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-1 {
  padding-bottom: 16px;
}

.emotion-2 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

<div
  aria-live="polite"
  className="emotion-0"
  data-cy="infoBox"
  role="log"
>
  <div
    className="emotion-1"
  >
    <MessageComponent />
  </div>
  <Clickable
    action={[Function]}
    tabIndex={0}
  >
    <span
      className="emotion-2"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="xs"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders with actions 1`] = `
.emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  padding-bottom: 16px;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: auto;
  padding-bottom: 16px;
}

.emotion-4 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  padding-left: 16px;
}

.emotion-5 {
  padding-left: 16px;
}

.emotion-6 {
  cursor: pointer;
  line-height: 0;
  opacity: 0.5;
}

<div
  aria-live="polite"
  className="emotion-0"
  data-cy="infoBox"
  role="log"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      message
    </div>
    <div
      className="emotion-3"
      data-cy="infoBox-actions"
    >
      <span
        className="emotion-4"
      >
        <PrimaryAction />
      </span>
      <span
        className="emotion-5"
      >
        <SecondaryAction />
      </span>
    </div>
  </div>
  <Clickable
    action={[Function]}
    tabIndex={0}
  >
    <span
      className="emotion-6"
    >
      <Icon
        color="#1B2029"
        shape="system-close"
        size="xs"
      />
    </span>
  </Clickable>
</div>
`;

exports[`InfoBox renders without dismiss button 1`] = `
.emotion-0 {
  background-color: #DADDE2;
  border-bottom-color: #828487;
  color: #1B2029;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  overflow: auto;
  word-break: break-word;
  padding: 16px;
  padding-bottom: 0;
  margin-bottom: 0;
  font-size: 12px;
  font-weight: 500;
}

.emotion-1 {
  padding-bottom: 16px;
}

<div
  aria-live="polite"
  className="emotion-0"
  data-cy="infoBox"
  role="log"
>
  <div
    className="emotion-1"
  >
    message
  </div>
</div>
`;
